# faiss

./: .gitignore  Conversation_Record_IndexIVFPQ.md  IndexIVFPQ_Tech_Notes.md  IndexIVFPQ_Technical_Summary.md  cmakeDebug.sh  cmakeRelease.sh
faiss/NPU/: CMakeLists.txt  NPUIndexIVFPQ.cpp  NPUIndexIVFPQ.h  NPUIndexPQ.cpp  NPUIndexPQ.h  NPUOps.cpp  NPUOps.h  NPUResources.cpp  NPUResources.h  README_NPU.md  test_npu_index.cpp
ivfpq_search_project/: CMakeLists.txt  README.md
ivfpq_search_project/config/: default.ini  test.ini
ivfpq_search_project/include/: concurrent_search.h  config_loader.h  ivfpq_index.h  re_ranking.h  types.h  vector_generator.h
ivfpq_search_project/src/: concurrent_search.cpp  config_loader.cpp  ivfpq_index.cpp  re_ranking.cpp  vector_generator.cpp
ivfpq_search_project/tests/: test_main.cpp
test_ivfpq/: CMakeLists.txt  Config.cpp  Config.h  IndexTest.cpp  IndexTest.h  README.md  VectorGenerator.cpp  VectorGenerator.h  main.cpp
test_ivfpq/.cache/clangd/index/: Config.cpp.8BE6F0F684D74B79.idx  Config.h.11309D5771E77F35.idx  IndexTest.cpp.49261F83BB52BFE8.idx  IndexTest.h.3322C2D386335413.idx  VectorGenerator.cpp.917281542FDDEA2C.idx  VectorGenerator.h.B21D32FF22D26C51.idx  main.cpp.9D85CF0285A288F2.idx
tutorial/cpp/: 3-IVFPQ.cpp
